# mlops-project

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml  docker-publish.yml
artifacts/model/: MLmodel  conda.yaml  input_example.json  model.pkl  python_env.yaml  registered_model_meta  requirements.txt  serving_input_example.json
notebooks/: 01_eda_california_housing.ipynb
reports/shap/: local_force_idx0.html  summary_top_features.txt
src/mon_mlops_project/analysis/: drift_report.py  shap_analysis.py
src/mon_mlops_project/models/: promote_best.py  train.py
src/mon_mlops_project/serving/: api.py  schemas.py
tests/: test_health.py
