[project]
name = "mon-mlops-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pytest ",
    "fastapi[standard] ",
    "fastapi-cli ",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "mlflow ",
    "numpy ",
    "pandas ",
    "scikit-learn ",
    "matplotlib ",
    "seaborn ",
    "joblib ",
    "pydantic ",
    "streamlit ",
    "requests ",
    "evidently ",
    "python-dotenv ",
    "typer ",
    "rich ",
    "shap (<0.45)"
]

[tool.poetry.scripts]
main-api = "src.mon_mlops_project.main:main"

[tool.poetry]
packages = [{include = "mon_mlops_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
